--- a/csshomepage.css
+++ b/csshomepage.css
@@ -1,6 +1,6 @@
 ul {
   padding: 10px;
-  background:black;
+  background-color: black;
   color: white;
 }
 li {
@@ -8,24 +8,20 @@ li {
   padding: 0px 75px 0px 75px;
   font-size: 40px;
 }
-header {
-  text-align: center;
-  color: white;
-  background: url("backgroundimage_homepage.jpeg");
-}
 .nav a {
   color: white;
 }
 body {
-  font-family: "Helvetica";
+  font-family: "Courier New";
+  background-color: black;
 }
 .Wow {
-  background-color: #b997db;
+  background-color: black;
   text-align: center;
   color: white;
 }
 .contact {
-  background-color: #3f0c72;
+  background-color: black;
   color: white;
   padding: 10px 10px 10px 10px;
 }
@@ -33,8 +29,32 @@ body {
   font-size: 150px;
 }
 .mission {
-  font-size: 50px;
+  font-size: 35px;
+  background-color: black;
+  color: white;
 }
 .wowblurb {
   font-size: 25px;
+}
+.wowlist a {
+  color: white
+  font-size: 25px;
+}
+.wowtitle {
+  font-size: 40px;
+}
+.jumbotron {
+  background-image: url("background2.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 600px;
+  font-size: 100px;
+  color: white;
+  text-align: center;
+}
+.polltext {
+  font-size: 50px;
+}
+.poll {
+  font-size: 50px;
 }
