--- a/cssnewspage.css
+++ b/cssnewspage.css
@@ -14,11 +14,28 @@ li {
 .title {
   font-size: 75px;
   text-align: center;
+  padding: 40px;
+  color: white;
 }
 body {
-  font-family: "Helvetica";
+  font-family: "Courier New";
+  background-color: black;
 }
 .newsheadlines {
   text-align: center;
   font-size: 40px;
+  color: white;
+}
+.mission {
+  text-align: center;
+  color: white;
+}
+.bodytext {
+  color: white;
+}
+.images {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
