--- a/cssnewspage.css
+++ b/cssnewspage.css
@@ -39,3 +39,30 @@ body {
   margin-right: auto;
   width: 50%;
 }
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+}
+
+.text-over {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+
+.text-over2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
