--- a/Get_involved/cssgetinvolved.css
+++ b/Get_involved/cssgetinvolved.css
@@ -25,3 +25,17 @@ h1 {
   font-size: 30px;
   padding-bottom: 100px;
 }
+
+img {
+  height: 400px;
+  width: 400px;
+}
+
+p {
+  font-size: 30px;
+  text-align: left;
+}
+
+.pinktext {
+  color: #d1128b;
+}
