--- a/cssnewspage.css
+++ b/cssnewspage.css
@@ -19,7 +19,7 @@ li {
 }
 body {
   font-family: "Courier New";
-  background-color: black;
+  background-color: #6f6f77;
 }
 .newsheadlines {
   text-align: center;
