--- a/Get_involved/cssgetinvolved.css
+++ b/Get_involved/cssgetinvolved.css
@@ -1,6 +1,6 @@
 ul {
   padding: 10px;
-  background-color: #d1128b;
+  background-color: #ef86c9;
   color: white;
 }
 li {
@@ -37,5 +37,5 @@ p {
 }
 
 .pinktext {
-  color: #d1128b;
+  color: #ef86c9;
 }
