--- a/csshomepage.css
+++ b/csshomepage.css
@@ -130,3 +130,9 @@ body {
   display: inline-blockquote;
   font-size: 160px;
 }
+.jumbotron2 {
+  background-color:#d1128b
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 600px;
+}
