--- a/csshomepage.css
+++ b/csshomepage.css
@@ -64,7 +64,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   min-height: 600px;
-  font-size: 100px;
+  font-size: 2px;
   color: white;
   text-align: center;
 }
@@ -125,14 +125,22 @@ body {
   border: none;
   color: white;
   padding: 100px 320px;
-  text-align: center;
+  text-align: right;
   text-decoration: none;
   display: inline-blockquote;
-  font-size: 160px;
+  font-size: 300px;
 }
 .jumbotron2 {
   background-color:#d1128b
   background-size: cover;
   background-attachment: fixed;
   min-height: 600px;
+}
+
+.socialbuttons {
+  align-items: center;
+}
+
+.title1 {
+  font-size: 300px;
 }
