--- a/cssnewspage.css
+++ b/cssnewspage.css
@@ -1,6 +1,6 @@
 ul {
   padding: 10px;
-  background:black;
+  background:#ef86c9;
   color: white;
 }
 li {
@@ -39,5 +39,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-
+}
+.navimage {
+  height: 10%;
+  width: 5%;
 }
