--- a/csshomepage.css
+++ b/csshomepage.css
@@ -1,17 +1,14 @@
 .navbar {
-  padding: 10px;
+  padding-top: 30px;
+  padding-bottom: 15px;
   background-color: #ef86c9;
-  color: white;
+  color: #6f6f77;
 }
 
 li {
   display: inline;
   padding: 0px 75px 0px 75px;
   font-size: 40px;
-}
-
-.nav a {
-  color: white;
 }
 
 body {
@@ -23,6 +20,7 @@ body {
   background-color: #ef86c9;
   text-align: center;
   color: white;
+  padding-bottom: 50px;
 }
 
 .contact {
@@ -43,10 +41,8 @@ body {
   text-align: center;
   margin-left:20%;
   margin-right: 20%;
-}
-
-.wowblurb {
-  font-size: 25px;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .wowlist a {
@@ -55,7 +51,7 @@ body {
 }
 
 .wowtitle {
-  font-size: 100px;
+  font-size: 50px;
   color: #6f6f77;
 }
 
@@ -71,6 +67,8 @@ body {
 
 .polltext {
   font-size: 50px;
+  color:#6f6f77;
+  padding-bottom: 20px;
 }
 
 .poll {
@@ -79,12 +77,7 @@ body {
 
 .navimage {
   height: 10%;
-  width: 5%;
-}
-
-.wowimage {
-  height:50%;
-  width:30%;
+  width: 7%;
 }
 
 .contactp {
@@ -100,8 +93,11 @@ body {
 }
 
 .Title2 {
-  font-size: 200px;
+  font-size: 100px;
   font-style: italic;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5%;
 }
 
 .Contact {
@@ -112,39 +108,56 @@ body {
 
 .wowblurb {
   font-size: 30px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
   text-align: left;
+}
 
 .Contact {
   background-color: #d1128b;
 }
 
-<<<<<<< HEAD
 .btn-lg {
   border: none;
-  color: white;
+  color: black;
   padding: 100px 320px;
   text-align: right;
   text-decoration: none;
   display: inline-blockquote;
-  font-size: 300px;
-=======
-.vote li {
-  color: black;
->>>>>>> d954c5173a677d292329b8dd61bb5b7d5d1c332b
+  font-size: 5px;
 }
+
+.btn-md {
+  color: black;
+}
+
 .jumbotron2 {
   background-color:#d1128b
   background-size: cover;
   background-attachment: fixed;
   min-height: 600px;
+  color: white;
 }
 
-.socialbuttons {
-  align-items: center;
+.btn-twitter {
+  background: #00acee;
+  font-size: 20px;
+  color: white;
 }
 
-.title1 {
-  font-size: 300px;
+.btn-facebook {
+  background: #4868ac;
+  font-size: 20px;
+  color: white;
+}
+
+.btn-pinterest {
+  background: #b62f26;
+  font-size: 20px;
+  color: white;
+}
+
+.container {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
