--- a/Get_involved/cssgetinvolved.css
+++ b/Get_involved/cssgetinvolved.css
@@ -1,16 +1,3 @@
-ul {
-  padding: 10px;
-  background-color: #ef86c9;
-  color: white;
-}
-li {
-  display: inline;
-  padding: 0px 75px 0px 75px;
-  font-size: 40px;
-}
-.nav a {
-  color: white;
-}
 body {
   font-family: "Courier New";
   background-color: #6f6f77;
@@ -21,15 +8,16 @@ body {
 h1 {
   font-size: 75px;
 }
+
 .subtitle {
   font-size: 30px;
   padding-bottom: 100px;
 }
 
 img {
-  height: 400px;
-  width: 400px;
-  padding: 10px;
+  height: 40%;
+  width: 80%;
+  margin-bottom: 5%;
 }
 
 blockquote {
@@ -43,4 +31,73 @@ p {
 
 .pinktext {
   color: #ef86c9;
+}
+
+.greytext {
+  color: #6f6f77;
+}
+
+.navbar {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ef86c9;
+  color: #6f6f77;
+}
+
+li {
+  display: inline;
+  padding: 0px 75px 0px 75px;
+  font-size: 40px;
+}
+
+.row1 {
+  margin-bottom: 55%;
+}
+
+.btn-twitter {
+  background: #00acee;
+  font-size: 20px;
+  color: white;
+}
+
+.btn-facebook {
+  background: #4868ac;
+  font-size: 20px;
+  color: white;
+}
+
+.btn-pinterest {
+  background: #b62f26;
+  font-size: 20px;
+  color: white;
+}
+
+.btn-md {
+  color: black;
+}
+
+.container-fluid2 {
+  margin-top: 5%;
+  background-color: #ef86c9;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+.img-responsive {
+  height: 25%;
+  width: 25%;
+}
+
+.contactp {
+  font-size: 20px;
+  text-align: center;
+}
+
+.contacth {
+  font-size: 30px;
+}
+
+.input {
+  color: #6f6f77;
 }
