--- a/cssgetinvolved.css
+++ b/cssgetinvolved.css
@@ -5,12 +5,14 @@ body {
   text-align: center;
 }
 
-h1 {
-  font-size: 75px;
+.title {
+  font-size: 150px;
+  margin-bottom: 4%;
+  margin-top: 4%
 }
 
 .subtitle {
-  font-size: 30px;
+  font-size: 50px;
   padding-bottom: 100px;
 }
 
