--- a/cssgetinvolved.css
+++ b/cssgetinvolved.css
@@ -92,12 +92,14 @@ li {
 }
 
 .contactp {
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
+  color: #6f6f77;
 }
 
 .contacth {
-  font-size: 30px;
+  font-size: 40px;
+  color: #6f6f77;
 }
 
 .input {
@@ -107,4 +109,8 @@ li {
 .content {
   margin-left: 5%;
   margin-right: 5%;
+}
+
+a {
+  color: white;
 }
