--- a/csshomepage.css
+++ b/csshomepage.css
@@ -39,7 +39,7 @@ body {
   background-color: #6f6f77;
   color: white;
   text-align: center;
-  margin-left:20%;
+  margin-left: 20%;
   margin-right: 20%;
   padding-top: 5%;
   padding-bottom: 5%;
@@ -67,7 +67,7 @@ body {
 
 .polltext {
   font-size: 50px;
-  color:#6f6f77;
+  color: #6f6f77;
   padding-bottom: 20px;
 }
 
@@ -103,7 +103,7 @@ body {
 .Contact {
   background-color: #6f6f77;
   font-size: 30px;
-  text-align:center;
+  text-align: center;
 }
 
 .wowblurb {
@@ -128,8 +128,7 @@ body {
 }
 
 .jumbotron2 {
-  background-color:#d1128b
-  background-size: cover;
+  background-color: #d1128b background-size: cover;
   background-attachment: fixed;
   min-height: 600px;
   color: white;
